# DatalogicGoogleTest

./: .gitignore  CMakeLists.txt  CMakeLists.txt_orig
data/: crXXX.ccb:Zone.Identifier
data/config/: ConfigTest.json
include/io/: Prova.hpp
src/: MathOperation.cpp  MathOperation.hpp
src/algorithms/: CMakeLists.txt  profile3d_calculator.cpp  profile3d_calculator.h
src/calib/: CMakeLists.txt  aditof_intrinsics.cpp  aditof_intrinsics.h  calib_parameters.h  camera_parameters.cpp  camera_parameters.h
src/calib/ccb/: TOF_Calibration_Types.h  ccb.c  ccb.h
src/common/: frame.cpp  frame.h  frame_processor.cpp  frame_processor.h  parameters.cpp  parameters.h  types.h
src/io/: Prova.cpp  calib_io.cpp  calib_io.h  file_json.cpp  file_json.h
src/utils/: cpu_info.cpp  cpu_info.h  filesytem_helpers.cpp  filesytem_helpers.h  geometry.cpp  geometry.h  json_convertible.h
tests/: CMakeLists.txt  CMakeLists_test.txt:Zone.Identifier  Calib_Io_Test.cpp  CommonTest.h  ConfigManagerTest.cpp  ConfigManagerTest.h  ExpectedResultsTest.cpp  ExpectedResultsTest.h  File_JsonTest.cpp  FrameProcessorTest.cpp  InitializeEnvironment.cpp  Test.cpp  Test.h  UNKNOWN.INFO  UpdateParameterTest.cpp  UpdateParameterTest.h  Util.cpp  Util.h  testMathOperation.cpp  testMathOperation2.cpp
tests/data/: ConfigTest.json  crXYZ_FrameTest.ccb  fileTest.raw
tests/data/DataTestsConfig/: ListTests.json  Test_Profiles copy.json  Test_Profiles.json
tests/data/config/: calib_data.json  calib_data_XYZFrameTest.json  profile3d_calculatorTest.json  rs_algo_configTest.json
tests/functional/: CheckGenerateOutputTest.cpp  ProfileTest.cpp
tests/unit/: AdTof_IntrisicsTest.cpp  Calib_Io_Test.cpp  CameraParameterTest.cpp  CcbTest.cpp  File_JsonTest.cpp  FrameProcessorTest.cpp  ImageFrameTest.cpp  InvalidParameterTest.cpp  ParametersContainerTest.cpp  PtrParameterTest.cpp  XYZFrameTest.cpp
